--- a/iam/src/main/resources/application.properties
+++ b/iam/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.hikari.max-lifetime=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.jpa.show-sql=false
 # TODO remove after flyway
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # TODO uncomment after flyway
 # spring.jpa.properties.hibernate.default_schema=iam_schema
