--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.9'
 
 services:
-  postgres-db:
+  postgres-intsance:
     image: postgres:13.6-bullseye
     restart: always
-    container_name: postgres-db
-    hostname: postgres-db
+    container_name: postgres-instance
+    hostname: postgres-instance
     volumes:
       - ./data:/var/lib/postgresql/data
     environment:
