--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,23 @@ services:
     container_name: postgres-instance
     hostname: postgres-instance
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ./db-data:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: toor
       POSTGRES_USER: root
       POSTGRES_DB: db
     ports:
       - "5432:5432"
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: some-rabbit
+    hostname: my-rabbit
+    environment:
+      RABBITMQ_DEFAULT_USER: root
+      RABBITMQ_DEFAULT_PASS: toor
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+        - ./rabbitmq-data/:/var/lib/rabbitmq/
