--- a/iam/build.gradle
+++ b/iam/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2"
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
     implementation 'com.auth0:java-jwt:4.3.0'
 
     compileOnly 'org.projectlombok:lombok'
