commit remaining files

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+# rabbitmq configuration
+spring.rabbitmq.username=root
+spring.rabbitmq.password=toor
+rabbitmq.exchangeName=amq.direct
+rabbitmq.notification.queueName=notification.queue
+rabbitmq.notification.routingKey=notification
+rabbitmq.pad.queueName=pad.queue
+rabbitmq.pad.routingKey=pad
+rabbitmq.product.queueName=product.queue
+rabbitmq.product.routingKey=product
+# APIs configuration
+api.product.url=http://localhost:8080/api
