--- a/iam/src/main/resources/application.properties
+++ b/iam/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8082lo
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=root
