--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=root
