add queue listener to notification service

--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8083
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=root
@@ -21,3 +22,9 @@ spring.flyway.sql-migration-prefix=V
 spring.flyway.sql-migration-separator=__
 spring.flyway.sql-migration-suffixes=.sql
 spring.flyway.locations=classpath:db/migration
+# rabbitmq configuration
+spring.rabbitmq.username=root
+spring.rabbitmq.password=toor
+rabbitmq.exchangeName=amq.direct
+rabbitmq.notification.queueName=notification.queue
+rabbitmq.notification.routingKey=notification
