--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.flyway.sql-migration-prefix=V
 spring.flyway.sql-migration-separator=__
 spring.flyway.sql-migration-suffixes=.sql
 spring.flyway.locations=classpath:db/migration
+# rabbitmq configuration
+spring.rabbitmq.username=root
+spring.rabbitmq.password=toor
+rabbitmq.product.queueName=product.queue
