--- a/pad/build.gradle
+++ b/pad/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
     implementation 'org.flywaydb:flyway-core:9.16.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.auth0:java-jwt:4.3.0'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
