--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/db
-spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.hikari.connection-timeout=10000
 spring.datasource.hikari.max-lifetime=30000
@@ -22,8 +22,9 @@ spring.flyway.sql-migration-separator=__
 spring.flyway.sql-migration-suffixes=.sql
 spring.flyway.locations=classpath:db/migration
 # rabbitmq configuration
-spring.rabbitmq.username=root
-spring.rabbitmq.password=toor
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD}
 rabbitmq.exchangeName=amq.direct
 rabbitmq.notification.queueName=notification.queue
 rabbitmq.notification.routingKey=notification
